<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_index"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cours.dervaux.projetandroid.controller.Index">

    <Button
        android:text="@string/addScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="63dp"
        android:id="@+id/butAddScore"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="loadAddScore" />

    <Button
        android:text="@string/top10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/butTop10"
        android:layout_below="@+id/butAddScore"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="loadTop10" />

    <Button
        android:text="@string/gameList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/butGameList"
        android:layout_below="@+id/butTop10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="loadGameList" />

    <Button
        android:text="@string/userList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/butUserList"
        android:layout_below="@+id/butGameList"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="loadUserList" />
</RelativeLayout>
